update package n area
